# zfft

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conan.sh  conanfile.txt
rust/: Cargo.toml
rust/src/: main.rs
src/: CMakeLists.txt  Makefile  arithmetic.cu  utils.cuh  verify.cu
src/cpu/: add.cu  cpu.cuh  mul.cu
src/gpu/: add.cu  gpu.cuh  mul.cu
src/include/: helper_image.h
test/: .gitignore  CMakeLists.txt  tests.cu
